# plainlicense

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .shellcheckrc  .sourcery.yaml  .stylelintignore  .stylelintrc  .yamllint.yml  ADDING_A_LICENSE.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE_TEMPLATE.md  Makefile  README.md  REUSE.toml  SECURITY.md  TODO.md  UNLICENSE  _typos.toml  astro.config.mjs  astro.config.mts  astro.config.ts  biome.json  biome.jsonc  bun.lockb  commitlint.config.ts  debug-syllables.ts  embed_mkdocs_config.yml  eslint.config.mjs  hk.pkl  lerna.json  mise.toml  mkdocs.yml  mlc_config.json  package-lock.json  (+14 more)
.astro/: content.d.ts  data-store.json  settings.json
.devcontainer/: .bashrc  .p10k.zsh  .zshrc  container-setup.sh  devcontainer.json
.github/: FUNDING.yml  MAPPING_GENERATION_PROMPT.md  labeler.yml
.roo/: mcp.json
.serena/: project.yml
@types/: commitlint-plugin-selective-scope.d.ts
assets/: usage.jsonc
claudedocs/: mit-mapping-attempt.md  mit-mappings-draft.json  section-mapping-technical-design.md  site-review-2026-03-19.md  testing-strategy.md
cmsconfig/: authors.ts  blogPosts.ts  field-inference.ts  index.ts  licenses.ts  pages.ts  template_blocks.ts  utils.ts
docs/: cacheWorker.4OWGWVKB.js  cacheWorker.4OWGWVKB.js.map  cacheWorker.4PJF5622.js  cacheWorker.4PJF5622.js.map  cacheWorker.7SFNDGMN.js  cacheWorker.7SFNDGMN.js.map  cacheWorker.F7JTYP6Y.js  cacheWorker.F7JTYP6Y.js.map  cacheWorker.HY2NZKN2.js  cacheWorker.HY2NZKN2.js.map  cacheWorker.JQPLJI3F.js  cacheWorker.JQPLJI3F.js.map  cacheWorker.NF2ZB7G3.js  cacheWorker.NF2ZB7G3.js.map  cacheWorker.T55XCAMX.js  cacheWorker.T55XCAMX.js.map  cacheWorker.TLOTYQGG.js  cacheWorker.TLOTYQGG.js.map  cacheWorker.UYGCTNMV.js  index.md  (+8 more)
(+563 files in other folders)
